fixed issue with buttons on index not being correct size on mobile

--- a/index.css
+++ b/index.css
@@ -193,7 +193,7 @@ p a:visited {
     } .button {
         margin: 0 auto 2em;
         width: 30%;
-        min-width: 9.5em;
+        min-width: 10.5em;
     } .linkbar li {
         padding: 0;
         width: 100px;
